[package]
name = "signal-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "cookies", "json"] }
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6.6", default-features = false }
serde_json = "1.0"
chrono = { version = "0.4.38"}
